# vore

./: Cargo.toml  README.md
config/: example.toml  global.toml  qemu.lua
resources/: qemu-cmdline.txt  vore.def.lua
vore/: Cargo.toml  clap.schema.json  clap.yml
vore-core/: Cargo.toml
vore-core/src/: consts.rs  cpu_list.rs  global_config.rs  instance_config.rs  lib.rs  qemu.rs  utils.rs  virtual_machine.rs  virtual_machine_info.rs
vore-core/src/rpc/: calls.rs  mod.rs  serde.rs  traits.rs
vore/src/: client.rs  main.rs
vored/: Cargo.toml
vored/src/: daemon.rs  instance.rs  main.rs
