[package]
name = "vore"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
vore-core = { features = ["client"], path = "../vore-core" }
log = "0.4.14"
pretty_env_logger = "0.3"
clap = { version = "2.33.3", features = ["yaml"] }