[package]
name = "vored"
version = "0.1.0"
authors = ["eater <=@eater.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
vore-core = { path = "../vore-core", features = ["host"] }
polling = "2.0.3"
log = "0.4.14"
pretty_env_logger = "0.3"
signal-hook = { version = "0.3.8", features = ["iterator"] }
libc = "0.2.94"